fixed nav title alignment  on pdp page

--- a/www/css/custom.css
+++ b/www/css/custom.css
@@ -283,6 +283,10 @@
     margin-right: 10px!important;
 }
 
+.m-r-20{
+    margin-right: 20px!important;
+}
+
 .w-400{
     font-weight: 400!important;
 }
